<resources>
    <string name="app_name">ShiftUp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="action_rest_password">Reset password</string>
    <string name="action_back_to_login">Back to Login</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="or">OR</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!--    nav bar-->
    <string name="title_shifts">Shifts</string>
    <string name="title_next">Next Week</string>
    <string name="title_group">Group</string>
    <string name="title_settings">Settings</string>

    <!--    table things-->
    <string name="none">None</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="add_shift">Add Shift</string>
    <string name="information">Information</string>
    <string name="Employee">Employee</string>

    <string name="logout">Logout</string>
    <string name="group_code">Group code</string>
    <string name="join">Join</string>
    <string name="leave_group">Leave group</string>
    <string name="group_position">Group Position</string>
    <string name="employee_name">Employee Name</string>
    <string name="code_template">Group code:</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="members">Members:</string>
    <string name="roles">Roles:</string>
    <string name="add_role">Add role</string>
    <string name="role_name">Role name</string>
    <string name="role_description">Role description</string>
    <string name="role_info">Role information</string>
    <string name="save">Save</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="change_colour">Change colour</string>
    <string name="start_time_template">Start time:</string>
    <string name="edit">Edit</string>
    <string name="end_time_template">End time:</string>
    <string name="you_are_logged_in_as">You are logged in as</string>
    <string name="select_a_day">Select a day</string>
    <string name="select_a_role">Select a role</string>
    <string name="delete_shift">Delete shift</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="logo">Logo</string>
</resources>
