<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_shifts">

    <fragment
        android:id="@+id/navigation_shifts"
        android:name="com.nicholasnkk.shiftup.fragments.ShiftsFragment"
        android:label="@string/title_shifts"
        tools:layout="@layout/fragment_shifts" />

    <fragment
        android:id="@+id/navigation_next"
        android:name="com.nicholasnkk.shiftup.fragments.NextFragment"
        android:label="@string/title_next"
        tools:layout="@layout/fragment_next" />

    <fragment
        android:id="@+id/navigation_group"
        android:name="com.nicholasnkk.shiftup.fragments.GroupFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_join" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.nicholasnkk.shiftup.fragments.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
