<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/shift_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/add_shift" />


        <TextView
            android:id="@+id/day_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_a_day" />

        <Spinner
            android:id="@+id/day_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/role_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_a_role" />

        <Spinner
            android:id="@+id/role_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/dialogAddButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />
    </LinearLayout>
</ScrollView>