<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="18dip"
    android:layout_marginLeft="18dip"
    android:layout_marginRight="18dip"
    android:layout_marginBottom="?android:attr/actionBarSize"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:id="@+id/userMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/you_are_logged_in_as" />

    <Button
        android:id="@+id/leaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/leave_group" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/logout" />
</LinearLayout>