<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?android:attr/actionBarSize"
    tools:context=".fragments.GroupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="18dip"
        android:paddingRight="18dip"
        android:paddingTop="18dip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/code_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/code_template"
            android:textStyle="bold" />

        <Button
            android:id="@+id/copyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copy_to_clipboard" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/memberLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/members" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/employee_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/addRoleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_role" />

        <TextView
            android:id="@+id/roleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roles" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/role_recycler_view"
            android:layout_width="match_parent"

            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>