<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?android:attr/actionBarSize"
    tools:context=".fragments.NextFragment">

    <HorizontalScrollView
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:textStyle="bold"
                android:text="@string/monday"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/monday_employees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="@string/none"
                android:textColor="#000"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:textStyle="bold"
                android:text="@string/tuesday"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tuesday_employees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="@string/none"
                android:textColor="#000"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:textStyle="bold"
                android:text="@string/wednesday"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/wednesday_employees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="@string/none"
                android:textColor="#000"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:textStyle="bold"
                android:text="@string/thursday"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/thursday_employees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="@string/none"
                android:textColor="#000"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:textStyle="bold"
                android:text="@string/friday"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/friday_employees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="@string/none"
                android:textColor="#000"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:textStyle="bold"
                android:text="@string/saturday"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/saturday_employees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="@string/none"
                android:textColor="#000"
                android:textSize="12sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:textStyle="bold"
                android:text="@string/sunday"
                android:textColor="#000"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/sunday_employees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:text="@string/none"
                android:textColor="#000"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_layout"
        android:layout_below="@+id/tableLayout"
        android:orientation="vertical">

        <TextView
            android:id="@+id/role_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dip"
            android:textStyle="bold"
            android:text="@string/roles"
            android:textColor="#000"
            android:textSize="12sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/role_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteShift"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_shift"
            android:layout_width="0dp" />

        <Button
            android:id="@+id/addShift"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_shift"
            android:layout_width="0dp" />

    </LinearLayout>

</RelativeLayout>